WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259990
[image-set] border-image should fall back to border if the image is invalid
https://bugs.webkit.org/show_bug.cgi?id=259990
Summary
[image-set] border-image should fall back to border if the image is invalid
Ryan Reno
Reported
2023-08-09 13:22:09 PDT
Failure in imported/w3c/web-platform-tests/css/css-images/image-set/image-set-all-options-invalid.html
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-09 13:22:21 PDT
<
rdar://problem/113646392
>
Ryan Reno
Comment 2
2023-08-09 13:30:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16532
EWS
Comment 3
2023-08-09 17:31:40 PDT
Committed
266749@main
(0cb488dc32c4): <
https://commits.webkit.org/266749@main
> Reviewed commits have been landed. Closing PR #16532 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug