[image-set] border-image should fall back to border if the image is invalid https://bugs.webkit.org/show_bug.cgi?id=259990 rdar://113646392

Reviewed by Tim Nguyen.

If the image-set represents an invalid image it behaves as a zero-sized
transparent image. We can accomplish this by returning false from
StyleInvalidImage::canRender. In the case of border-image, we check to
see if we can render the image and if not we will behave as if we don't
have a border-image at all. This will then fall back to the border
property value, if present.

Also update image-set WPT as of upstream commit
cccad108b803ef9541ee164a306a9d694c831e01

* LayoutTests/imported/w3c/web-platform-tests/css/css-images/image-set/image-set-all-options-invalid-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/image-set/image-set-all-options-invalid.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/image-set/image-set-computed.sub-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/image-set/image-set-computed.sub.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/image-set/w3c-import.log:
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/css/css-images/image-set/image-set-computed.sub-expected.txt:
* Source/WebCore/rendering/style/StyleInvalidImage.h:

Canonical link: https://commits.webkit.org/266749@main